--- a/PlantPlacesWebService/PlantPlacesWebService/App.config
+++ b/PlantPlacesWebService/PlantPlacesWebService/App.config
@@ -3,5 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    
+  </connectionStrings>
  
 </configuration>
